log
Wed 08 May 2024 06:00:31 PM UTC: 
 tests:  1|8
total_score: 0/70
4834c6d
Wed 08 May 2024 06:12:52 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b8f4a5b
Wed 08 May 2024 06:17:09 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
6a31bbd
Wed 08 May 2024 06:19:21 PM UTC: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
4d60224
Wed 08 May 2024 06:23:19 PM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 15/70
04d8b60
Wed 08 May 2024 07:16:10 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
71ff0b8
Wed 08 May 2024 07:16:32 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9bba59a
Wed 08 May 2024 07:17:49 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
951fb1f
Wed 08 May 2024 07:20:06 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0a3b180
Wed 08 May 2024 07:22:07 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
eb5f4cb
Thu 09 May 2024 04:06:34 AM UTC: 
 treemap.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:102:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  102 |         return minimum(tree->current);
      |                ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4cda4a1
